syntax = "proto3";

package blogPackage;
message Blog{
    int32 id = 1;
    string title = 2;
    string text = 3;
}

message BlogId{
    int32 id = 1;
}

message BlogList{
    repeated Blog blogs = 1;
}

message NewBlog{
    string title = 1; 
    string text = 2;
}

message Result {
    string status = 1;
}

message Empty {}

service BlogService{
    rpc listBlog (Empty) returns (BlogList);
    rpc getBlog (BlogId) returns (Blog);
    rpc createBlog (NewBlog) returns (Result);
    rpc updateBlog (Blog) returns (Result);
    rpc deleteBlog (BlogId) returns (Result);
}